--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ gunicorn==21.2.0
 django-cors-headers==4.3.1
 
 # Development Tools (optional)
-django-debug-toolbar==4.2.0
+#django-debug-toolbar==4.2.0
