--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database Configuration
-DATABASE_URL=postgresql://vantor_user:vantor_password@localhost:5432/vantor_db
+#DATABASE_URL=postgresql://vantor_user:vantor_password@localhost:5432/vantor_db
 
 # Email Configuration (for future order notifications)
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
